gramatica/gCompParser.java
// Generated from gComp.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gCompParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Length=1, If=2, For=3, To=4, Do=5, Begin=6, End=7, While=8, Repeat=9, 
		Until=10, Then=11, Else=12, Left_bracket=13, Right_bracket=14, Left_parenthesis=15, 
		Right_parenthesis=16, Call=17, Dot=18, Assignation=19, Return=20, And=21, 
		Or=22, Not=23, Less_than=24, Greater_than=25, Less_equal=26, Greater_equal=27, 
		Equal_to=28, Not_equal=29, Plus=30, Times=31, Divided=32, Minus=33, Mod=34, 
		Div=35, Comma=36, Endl=37, Ceil_start=38, Ceil_end=39, Floor_start=40, 
		Floor_end=41, Null=42, True=43, False=44, Integer=45, String=46, Identifier=47, 
		LineComment=48, WS=49;
	public static final int
		RULE_program = 0, RULE_ps_function = 1, RULE_parameterList = 2, RULE_parameter = 3, 
		RULE_arrayParameter = 4, RULE_arrayDeclarations = 5, RULE_arrayDeclaration = 6, 
		RULE_dims = 7, RULE_block = 8, RULE_blockStatements = 9, RULE_statement = 10, 
		RULE_returnStatement = 11, RULE_variableDeclarations = 12, RULE_variableDeclaration = 13, 
		RULE_expression = 14, RULE_infixOperator = 15, RULE_expression1 = 16, 
		RULE_prefixOperator = 17, RULE_roundExpression = 18, RULE_expression2 = 19, 
		RULE_functionCall = 20, RULE_callParameterList = 21, RULE_callParameters = 22, 
		RULE_literal = 23, RULE_arrayElement = 24, RULE_subArray = 25, RULE_arrayLength = 26, 
		RULE_ifStatement = 27, RULE_ifElseStatement = 28, RULE_whileStatement = 29, 
		RULE_forStatement = 30, RULE_repeatStatement = 31, RULE_expressionStatement = 32;
	public static final String[] ruleNames = {
		"program", "ps_function", "parameterList", "parameter", "arrayParameter", 
		"arrayDeclarations", "arrayDeclaration", "dims", "block", "blockStatements", 
		"statement", "returnStatement", "variableDeclarations", "variableDeclaration", 
		"expression", "infixOperator", "expression1", "prefixOperator", "roundExpression", 
		"expression2", "functionCall", "callParameterList", "callParameters", 
		"literal", "arrayElement", "subArray", "arrayLength", "ifStatement", "ifElseStatement", 
		"whileStatement", "forStatement", "repeatStatement", "expressionStatement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'length'", "'if'", "'for'", "'to'", "'do'", "'begin'", "'end'", 
		"'while'", "'repeat'", "'until'", "'then'", "'else'", "'['", "']'", "'('", 
		"')'", "'call'", "'.'", null, null, "'and'", "'or'", "'not'", "'<'", "'>'", 
		null, null, "'='", null, "'+'", "'*'", "'/'", "'-'", "'mod'", "'div'", 
		"','", "'\n'", "'┌'", "'┐'", "'└'", "'┘'", "'NULL'", "'true'", "'false'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "Length", "If", "For", "To", "Do", "Begin", "End", "While", "Repeat", 
		"Until", "Then", "Else", "Left_bracket", "Right_bracket", "Left_parenthesis", 
		"Right_parenthesis", "Call", "Dot", "Assignation", "Return", "And", "Or", 
		"Not", "Less_than", "Greater_than", "Less_equal", "Greater_equal", "Equal_to", 
		"Not_equal", "Plus", "Times", "Divided", "Minus", "Mod", "Div", "Comma", 
		"Endl", "Ceil_start", "Ceil_end", "Floor_start", "Floor_end", "Null", 
		"True", "False", "Integer", "String", "Identifier", "LineComment", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gComp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gCompParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(gCompParser.EOF, 0); }
		public List<Ps_functionContext> ps_function() {
			return getRuleContexts(Ps_functionContext.class);
		}
		public Ps_functionContext ps_function(int i) {
			return getRuleContext(Ps_functionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				ps_function();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Identifier );
			setState(71);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ps_functionContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(gCompParser.Identifier, 0); }
		public TerminalNode Left_parenthesis() { return getToken(gCompParser.Left_parenthesis, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode Right_parenthesis() { return getToken(gCompParser.Right_parenthesis, 0); }
		public TerminalNode Endl() { return getToken(gCompParser.Endl, 0); }
		public ArrayDeclarationsContext arrayDeclarations() {
			return getRuleContext(ArrayDeclarationsContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public Ps_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ps_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterPs_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitPs_function(this);
		}
	}

	public final Ps_functionContext ps_function() throws RecognitionException {
		Ps_functionContext _localctx = new Ps_functionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ps_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(Identifier);
			setState(74);
			match(Left_parenthesis);
			setState(75);
			parameterList();
			setState(76);
			match(Right_parenthesis);
			setState(77);
			match(Endl);
			setState(78);
			arrayDeclarations();
			setState(79);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(gCompParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(gCompParser.Comma, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitParameterList(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameterList);
		int _la;
		try {
			setState(90);
			switch (_input.LA(1)) {
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				parameter();
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(82);
					match(Comma);
					setState(83);
					parameter();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case Right_parenthesis:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public ArrayParameterContext arrayParameter() {
			return getRuleContext(ArrayParameterContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(gCompParser.Identifier, 0); }
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitParameter(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parameter);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				arrayParameter();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(Identifier);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayParameterContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(gCompParser.Identifier, 0); }
		public List<TerminalNode> Left_bracket() { return getTokens(gCompParser.Left_bracket); }
		public TerminalNode Left_bracket(int i) {
			return getToken(gCompParser.Left_bracket, i);
		}
		public List<TerminalNode> Right_bracket() { return getTokens(gCompParser.Right_bracket); }
		public TerminalNode Right_bracket(int i) {
			return getToken(gCompParser.Right_bracket, i);
		}
		public List<TerminalNode> Integer() { return getTokens(gCompParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(gCompParser.Integer, i);
		}
		public ArrayParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterArrayParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitArrayParameter(this);
		}
	}

	public final ArrayParameterContext arrayParameter() throws RecognitionException {
		ArrayParameterContext _localctx = new ArrayParameterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_arrayParameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(Identifier);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Left_bracket) {
				{
				{
				setState(97);
				match(Left_bracket);
				setState(99);
				_la = _input.LA(1);
				if (_la==Integer) {
					{
					setState(98);
					match(Integer);
					}
				}

				setState(101);
				match(Right_bracket);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclarationsContext extends ParserRuleContext {
		public List<ArrayDeclarationContext> arrayDeclaration() {
			return getRuleContexts(ArrayDeclarationContext.class);
		}
		public ArrayDeclarationContext arrayDeclaration(int i) {
			return getRuleContext(ArrayDeclarationContext.class,i);
		}
		public ArrayDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterArrayDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitArrayDeclarations(this);
		}
	}

	public final ArrayDeclarationsContext arrayDeclarations() throws RecognitionException {
		ArrayDeclarationsContext _localctx = new ArrayDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayDeclarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(107);
				arrayDeclaration();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclarationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(gCompParser.Identifier, 0); }
		public DimsContext dims() {
			return getRuleContext(DimsContext.class,0);
		}
		public TerminalNode Endl() { return getToken(gCompParser.Endl, 0); }
		public ArrayDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterArrayDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitArrayDeclaration(this);
		}
	}

	public final ArrayDeclarationContext arrayDeclaration() throws RecognitionException {
		ArrayDeclarationContext _localctx = new ArrayDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arrayDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(Identifier);
			setState(114);
			dims();
			setState(115);
			match(Endl);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DimsContext extends ParserRuleContext {
		public List<TerminalNode> Left_bracket() { return getTokens(gCompParser.Left_bracket); }
		public TerminalNode Left_bracket(int i) {
			return getToken(gCompParser.Left_bracket, i);
		}
		public List<TerminalNode> Integer() { return getTokens(gCompParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(gCompParser.Integer, i);
		}
		public List<TerminalNode> Right_bracket() { return getTokens(gCompParser.Right_bracket); }
		public TerminalNode Right_bracket(int i) {
			return getToken(gCompParser.Right_bracket, i);
		}
		public DimsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dims; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterDims(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitDims(this);
		}
	}

	public final DimsContext dims() throws RecognitionException {
		DimsContext _localctx = new DimsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dims);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(Left_bracket);
			setState(118);
			match(Integer);
			setState(119);
			match(Right_bracket);
			setState(125);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(120);
					match(Left_bracket);
					setState(121);
					match(Integer);
					setState(122);
					match(Right_bracket);
					}
					} 
				}
				setState(127);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode Begin() { return getToken(gCompParser.Begin, 0); }
		public List<TerminalNode> Endl() { return getTokens(gCompParser.Endl); }
		public TerminalNode Endl(int i) {
			return getToken(gCompParser.Endl, i);
		}
		public TerminalNode End() { return getToken(gCompParser.End, 0); }
		public BlockStatementsContext blockStatements() {
			return getRuleContext(BlockStatementsContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(Begin);
			setState(129);
			match(Endl);
			setState(131);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Length) | (1L << If) | (1L << For) | (1L << While) | (1L << Repeat) | (1L << Call) | (1L << Return) | (1L << Not) | (1L << Ceil_start) | (1L << Floor_start) | (1L << Null) | (1L << True) | (1L << False) | (1L << Integer) | (1L << String) | (1L << Identifier))) != 0)) {
				{
				setState(130);
				blockStatements();
				}
			}

			setState(133);
			match(End);
			setState(134);
			match(Endl);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockStatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockStatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockStatements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterBlockStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitBlockStatements(this);
		}
	}

	public final BlockStatementsContext blockStatements() throws RecognitionException {
		BlockStatementsContext _localctx = new BlockStatementsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_blockStatements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			statement();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Length) | (1L << If) | (1L << For) | (1L << While) | (1L << Repeat) | (1L << Call) | (1L << Return) | (1L << Not) | (1L << Ceil_start) | (1L << Floor_start) | (1L << Null) | (1L << True) | (1L << False) | (1L << Integer) | (1L << String) | (1L << Identifier))) != 0)) {
				{
				{
				setState(137);
				statement();
				}
				}
				setState(142);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public VariableDeclarationsContext variableDeclarations() {
			return getRuleContext(VariableDeclarationsContext.class,0);
		}
		public TerminalNode Endl() { return getToken(gCompParser.Endl, 0); }
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfElseStatementContext ifElseStatement() {
			return getRuleContext(IfElseStatementContext.class,0);
		}
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public ForStatementContext forStatement() {
			return getRuleContext(ForStatementContext.class,0);
		}
		public RepeatStatementContext repeatStatement() {
			return getRuleContext(RepeatStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public ExpressionStatementContext expressionStatement() {
			return getRuleContext(ExpressionStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statement);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				variableDeclarations();
				setState(144);
				match(Endl);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				ifStatement();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				ifElseStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(148);
				whileStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(149);
				forStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(150);
				repeatStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(151);
				returnStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(152);
				expressionStatement();
				setState(153);
				match(Endl);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public TerminalNode Return() { return getToken(gCompParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Endl() { return getToken(gCompParser.Endl, 0); }
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterReturnStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitReturnStatement(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_returnStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			match(Return);
			setState(158);
			expression();
			setState(159);
			match(Endl);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationsContext extends ParserRuleContext {
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(gCompParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(gCompParser.Comma, i);
		}
		public VariableDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).enterVariableDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gCompListener ) ((gCompListener)listener).exitVariableDeclarations(this);
		}
	}
